// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetSerializer ({ moduleID: 2, assetID: 0, asset: [Object] }) #toMachine 1`] = `
Object {
  "amount": 100000000n,
  "data": "",
  "recipientAddress": Object {
    "data": Array [
      118,
      60,
      25,
      27,
      10,
      77,
      5,
      117,
      2,
      12,
      225,
      230,
      80,
      3,
      117,
      214,
      208,
      189,
      212,
      94,
    ],
    "type": "Buffer",
  },
}
`;

exports[`AssetSerializer ({ moduleID: 4, assetID: 0, asset: [Object] }) #toMachine 1`] = `
Object {
  "mandatoryKeys": Array [
    Object {
      "data": Array [
        89,
        72,
        204,
        5,
        101,
        163,
        233,
        50,
        12,
        116,
        66,
        206,
        203,
        98,
        172,
        220,
        146,
        180,
        40,
        160,
        218,
        80,
        76,
        82,
        175,
        179,
        232,
        74,
        2,
        93,
        34,
        31,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        163,
        194,
        47,
        214,
        116,
        131,
        174,
        7,
        19,
        76,
        147,
        34,
        67,
        132,
        218,
        199,
        32,
        108,
        64,
        177,
        183,
        161,
        65,
        134,
        221,
        45,
        63,
        13,
        204,
        130,
        52,
        255,
      ],
      "type": "Buffer",
    },
  ],
  "numberOfSignatures": 2,
  "optionalKeys": Array [],
}
`;

exports[`AssetSerializer ({ moduleID: 5, assetID: 0, asset: [Object] }) #toMachine 1`] = `
Object {
  "username": "johndoe",
}
`;

exports[`AssetSerializer ({ moduleID: 5, assetID: 1, asset: [Object] }) #toMachine 1`] = `
Object {
  "votes": Array [
    Object {
      "amount": 100000000000000000n,
      "delegateAddress": Object {
        "data": Array [
          118,
          60,
          25,
          27,
          10,
          77,
          5,
          117,
          2,
          12,
          225,
          230,
          80,
          3,
          117,
          214,
          208,
          189,
          212,
          94,
        ],
        "type": "Buffer",
      },
    },
  ],
}
`;
